examples/test/testpolicy6430.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6430
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key46: value34
      key20: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value26
          key27: value48
      podSelector:
        matchLabels:
          key12: value4
